Fix mobile column: use gap instead of margin for feature grid

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -82,8 +82,11 @@
 	#main {
 		padding: 3em 2em;
 	}
+	.features {
+		gap: 1em;
+	}
 	.feature {
-		width: calc(50% - 1em);
+		width: calc(50% - 0.5em);
 		padding: 1.25em;
 	}
 	.feature > .icon {
@@ -118,9 +121,11 @@
 	#main {
 		padding: 2em 1.5em;
 	}
+	.features {
+		gap: 0.75em;
+	}
 	.feature {
 		width: 100%;
-		margin: 0.75em 0;
 		padding: 0.75em 0;
 		gap: 0.25em 0.75em;
 	}
@@ -166,8 +171,10 @@
 	#main {
 		padding: 1.5em 1em;
 	}
+	.features {
+		gap: 0.5em;
+	}
 	.feature {
-		margin: 0.5em 0;
 		padding: 0.5em 0;
 		gap: 0.2em 0.5em;
 	}
@@ -217,23 +224,15 @@ section h2 {
 }
 
 .features {
-	display: -webkit-flex;
-	display: -moz-flex;
-	display: -ms-flex;
 	display: flex;
-	-moz-flex-wrap: wrap;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
-	-moz-justify-content: center;
-	-webkit-justify-content: center;
-	-ms-justify-content: center;
 	justify-content: center;
+	gap: 1.5em;
 }
 
 .feature {
-	width: 30%;
-	margin: 1.5em 1%;
+	width: calc(33.333% - 1.5em);
+	box-sizing: border-box;
 	padding: 1.5em;
 	display: flex;
 	flex-direction: row;
@@ -246,20 +245,17 @@ section h2 {
 .feature > .icon {
 	flex: 0 0 2em;
 	font-size: 2em;
-	order: 0;
 }
 
 .feature h3 {
 	flex: 1 1 calc(100% - 3em);
 	font-size: 1.1em;
 	margin: 0;
-	order: 1;
 }
 
 .feature p {
 	flex: 1 1 100%;
 	margin: 0;
-	order: 2;
 	padding-left: calc(2em + 1em);
 }
 
